--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
       href="https://unpkg.com/maplibre-gl@4.7.1/dist/maplibre-gl.css"
       rel="stylesheet"
     />
-    <title>Cool U!</title>
+    <title>EcoScope!</title>
   </head>
   <body>
     <div id="root"></div>
